--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d dist",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -26,7 +26,8 @@
     "react-hook-form": "^7.51.4",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
-    "tailwind-scrollbar": "^3.1.0"
+    "tailwind-scrollbar": "^3.1.0",
+    "tsc": "^2.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
